--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -1,11 +1,22 @@
-<h1>My first web page</h1>
-<h2>Writtedn with the guidance of Lily</h2>
-<p> This is my first web page!</p>
-<p>Isn't it nice?</p>
-<p>Here are some of the things I'm going to learn about coding:</p>
-<ul>
-    <li>HTML</li>
-    <li>CSS</li>
-    <li>JavaScript</li>
-    <li>And a lot more!</li>
-</ul>
+<!DOCTYPE html>
+<html lang="en-US">
+
+<head>
+    <title>Web page #1!</title>
+</head>
+
+<body>
+    <h1>My first web page</h1>
+    <h2>Writtedn with the guidance of Lily</h2>
+    <p> This is my first web page!</p>
+    <p>Isn't it nice?</p>
+    <p>Here are some of the things I'm going to learn about coding:</p>
+    <ul>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>JavaScript</li>
+        <li>And a lot more!</li>
+    </ul>
+</body>
+
+</html>
