--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -7,8 +7,8 @@
 
 <body>
     <h1>My first web page</h1>
-    <h2>Writtedn with the guidance of Lily</h2>
-    <p> This is my first web page!</p>
+    <h2>Written with the guidance of <em>Lily</em></h2>
+    <p> This is my <strong>first web page</strong>!</p>
     <p>Isn't it nice?</p>
     <p>Here are some of the things I'm going to learn about coding:</p>
     <ul>
@@ -17,6 +17,9 @@
         <li>JavaScript</li>
         <li>And a lot more!</li>
     </ul>
+    <p>Check out <a href="https://http.cat/">HTTP Cats</a>. It's an amanzing resource for learning HTTP Cat codes!</p>
+    <p>Here is a link to my <a href="favorite-things.html">favorite things</a>.</p>
+    <img src="img/imataco.jpg" alt="A photo of a taco.">
 </body>
 
 </html>
