--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -17,7 +17,8 @@
         <li>JavaScript</li>
         <li>And a lot more!</li>
     </ul>
-    <p>Check out <a href="https://http.cat/">HTTP Cats</a>. It's an amanzing resource for learning HTTP Cat codes!</p>
+    <p>Check out <a href="https://http.cat/">HTTP Cats</a>. It's an amanzing resource for HTTP status cat
+        codes! </p>
     <p>Here is a link to my <a href="favorite-things.html">favorite things</a>.</p>
     <img src="img/imataco.jpg" alt="A photo of a taco.">
 </body>
