fixed favorite-things link

--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -19,7 +19,7 @@
     </ul>
     <p>Check out <a href="https://http.cat/">HTTP Cats</a>. It's an amanzing resource for HTTP status cat
         codes! </p>
-    <p>Here is a link to my <a href="favorite-things.html">favorite things</a>.</p>
+    <p>Here is a link to my <a href="my-favorite-things.html">favorite things</a>.</p>
     <img src="img/imataco.jpg" alt="A photo of a taco.">
 </body>
 
