--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -2,6 +2,7 @@
 <html lang="en-US">
 
 <head>
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
     <title>Web page #1!</title>
 </head>
 
